update: more matchers + description + reference

--- a/misconfiguration/graphql/graphql-array-batching.yaml
+++ b/misconfiguration/graphql/graphql-array-batching.yaml
@@ -1,11 +1,18 @@
-id: graphql-array-based-batching
+id: graphql-array-batching
 
 info:
   name: GraphQL Array-based Batching
   author: Dolev Farhi
   severity: low
-  description: GraphQL Allows Batching Requests using Arrays
-  reference: https://stackoverflow.com/questions/62421352/graphql-difference-between-using-alias-versus-multiple-query-objects-when-doin
+  description: |
+    Some GraphQL engines support batching of multiple queries into a single request. This allows users to request multiple objects or multiple instances of objects efficiently.
+    However, an attacker can leverage this feature to evade many security measures, including Rate Limit.
+  reference:
+    - https://stackoverflow.com/questions/62421352/graphql-difference-between-using-alias-versus-multiple-query-objects-when-doin
+    - https://github.com/dolevf/Damn-Vulnerable-GraphQL-Application
+    - https://graphql.security/
+  remediation: |
+    Deactivate or limit Batching in your GraphQL engine.
   tags: graphql
 
 requests:
@@ -17,10 +24,17 @@ requests:
 
         [{"query":"query {\n __typename \n }"}, {"query":"mutation { \n __typename \n }"}]
 
+    matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "Query"
-          - "Mutations"
+          - ':"Query"'
+          - ':"Mutations"'
         case-insensitive: true
+        condition: and
+
+      - type: word
+        part: header
+        words:
+          - "application/json"
