--- a/exposed-panels/ansible-tower-exposure.yaml
+++ b/exposed-panels/ansible-tower-exposure.yaml
@@ -2,9 +2,16 @@ id: ansible-tower-exposure
 
 info:
   name: Ansible Tower Exposure
-  author: pdteam
+  author: pdteam,idealphase
   severity: low
-  tags: panel
+  description: Ansible Tower is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
+  reference:
+    - https://docs.ansible.com/ansible-tower/3.8.4/html/administration/
+    - https://docs.ansible.com/ansible-tower/latest/html/release-notes/index.html
+  metadata:
+    google-query: intitle:"Ansible Tower"
+    shodan-query: title:"Ansible Tower"
+  tags: panel,ansible
 
 requests:
   - method: GET
@@ -15,5 +22,12 @@ requests:
       - type: word
         words:
           - "<title>Ansible Tower</title>"
-          - "ansible-main-menu"
-        condition: and
+          - "ansible-bootstrap"
+        condition: or
+
+    extractors:
+      - type: regex
+        group: 1
+        part: body
+        regex:
+          - 'href="\/static\/assets\/favicon\.ico\?v=(.+)" \/>'
