--- a/exposed-panels/ixbus/ixbusweb-version.yml
+++ b/exposed-panels/ixbus/ixbusweb-version.yml
@@ -1,22 +1,22 @@
-id: ixbusweb-version-detect
+id: ixbusweb-panel
 
 info:
-  name: iXBusWeb version detect
+  name: iXBusWeb Panel Detect
   author: Podalirius
   severity: info
-  tags: version,ixbusweb,cms
+  tags: panel,ixbusweb,cms
 
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/'
+      - '{{BaseURL}}'
 
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - 'iXBusWeb'
-        condition: or
+          - '<title>iXBus</title>'
+
       - type: status
         status:
           - 200
