--- a/exposed-panels/ixbus/ixbusweb-version.yml
+++ b/exposed-panels/ixbus/ixbusweb-version.yml
@@ -4,6 +4,8 @@ info:
   name: iXBusWeb Panel Detect
   author: Podalirius
   severity: info
+  metadata:
+    shodan-query: http.title:"iXBus"
   tags: panel,ixbusweb,cms
 
 requests:
