--- a/exposed-panels/ansible-tower-exposure.yaml
+++ b/exposed-panels/ansible-tower-exposure.yaml
@@ -4,7 +4,7 @@ info:
   name: Ansible Tower Exposure
   author: pdteam,idealphase
   severity: low
-  description: Ansible Tower is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
+  description: Ansible Tower was detected. Ansible Tower is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
   reference:
     - https://docs.ansible.com/ansible-tower/3.8.4/html/administration/
     - https://docs.ansible.com/ansible-tower/latest/html/release-notes/index.html
@@ -12,6 +12,11 @@ info:
     google-query: intitle:"Ansible Tower"
     shodan-query: title:"Ansible Tower"
   tags: panel,ansible
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -31,3 +36,5 @@ requests:
         part: body
         regex:
           - 'href="\/static\/assets\/favicon\.ico\?v=(.+)" \/>'
+
+# Enhanced by mp on 2022/03/16
