--- a/cnvd/2021/CNVD-2021-14536.yaml
+++ b/cnvd/2021/CNVD-2021-14536.yaml
@@ -3,9 +3,12 @@ id: CNVD-2021-14536
 info:
   name: Ruijie RG-UAC Unified Internet Behavior Management Audit System - Information Disclosure
   author: daffainfo
-  severity: critical
+  severity: high
+  description:  Attackers could obtain user accounts and passwords by reviewing the source code of web pages, resulting in the leakage of administrator user authentication information.
   reference: https://www.adminxe.com/2163.html
-  tags: ruijie,cnvd,cnvd2021
+  metadata:
+    fofa-query: title="RG-UAC登录页面"
+  tags: ruijie,cnvd,cnvd2021,disclosure
 
 requests:
   - method: GET
@@ -26,3 +29,10 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - '"role":"super_admin",(["a-z:,0-9]+),"lastpwdtime":'
