--- a/vulnerabilities/other/tekon-info-leak.yaml
+++ b/vulnerabilities/other/tekon-info-leak.yaml
@@ -3,25 +3,33 @@ id: tekon-info-leak
 info:
   name: Tekon - Unauthenticated Log Leak
   author: gy741
-  severity: medium
+  severity: low
+  description: A vulnerability in Tekon allows remote unauthenticated users to disclose the Log of the remote device
   reference: https://medium.com/@bertinjoseb/post-auth-rce-based-in-malicious-lua-plugin-script-upload-scada-controllers-located-in-russia-57044425ac38
-  description: A vulnerability in Tekon allows remote unauthenticated users to disclose the Log of the remote device.
-  tags: tekon,exposure
+  metadata:
+    shodan-query: title:"контроллер"
+  tags: tekon,exposure,unauth
 
 requests:
   - method: GET
     path:
       - '{{BaseURL}}/cgi-bin/log.cgi'
 
+    max-size: 2048
     matchers-condition: and
     matchers:
-      - type: status
-        status:
-          - 200
-
       - type: word
+        part: body
         words:
           - "-- Logs begin at"
           - "end at"
-        part: body
         condition: and
+
+      - type: word
+        part: header
+        words:
+          - "text/plain"
+
+      - type: status
+        status:
+          - 200
