--- a/.github/workflows/new-templates.yml
+++ b/.github/workflows/new-templates.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Generate new template list
         id: new-additions
         run: |
+          git pull
           git diff  --name-only --diff-filter=A $(git tag | tail -n 1) @ . | grep .yaml | tee .new-additions
 
       - name: Commit files
