Dashboard Text Enhancements (#3948)
Dashboard content enhancements

--- a/exposed-panels/airflow-panel.yaml
+++ b/exposed-panels/airflow-panel.yaml
@@ -1,4 +1,4 @@
-id: airflow-panel
+id: airflow-admin-login-panel
 
 info:
   name: Apache Airflow Admin Login Panel
@@ -7,7 +7,7 @@ info:
   description: An Apache Airflow admin login panel was discovered.
   reference:
     - https://airflow.apache.org/docs/apache-airflow/stable/security/webserver.html
-  tags: panel,apache,airflow
+  tags: panel,apache,airflow,admin
   metadata:
     shodan-query: title:"Sign In - Airflow"
   classification:
@@ -35,4 +35,4 @@ requests:
         status:
           - 200
 
-# Enhanced by mp on 2022/03/16
+# Enhanced by mp on 2022/03/21
