--- a/exposed-panels/avatier-password-management.yaml
+++ b/exposed-panels/avatier-password-management.yaml
@@ -4,10 +4,17 @@ info:
   name: Avatier Password Management Panel Detect
   author: praetorian-thendrickson
   severity: info
-  reference: https://www.avatier.com
+  description: An Avatier password management panel was detected.
+  reference:
+    - https://www.avatier.com
   metadata:
     shodan-query: http.favicon.hash:983734701
   tags: panel,avatier
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:L/I:N/A:N
+    cvss-score: 5.3
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -21,3 +28,5 @@ requests:
           - 'LabelWelcomeToPS'
           - 'Avatier Corporation'
         condition: and
+
+# Enhanced by mp on 2022/03/20
