--- a/vulnerabilities/vmware/vrealize-operations-log4j-rce.yaml
+++ b/vulnerabilities/vmware/vrealize-operations-log4j-rce.yaml
@@ -1,14 +1,20 @@
 id: vrealize-operations-log4j-rce
 
 info:
-  name: vRealize Operations Tenant App Log4j JNDI RCE
+  name: VMware vRealize Operations Tenant App Log4j JNDI RCE
   author: bughuntersurya
   severity: critical
-  description: A critical vulnerability in Apache Log4j identified by CVE-2021-44228 has been publicly disclosed that may allow for remote code execution in an impacted vRealize Operations Tenant Application.
-  reference: https://www.vmware.com/security/advisories/VMSA-2021-0028.html
+  description: VMware vRealize Operations is susceptible to a critical vulnerability in Apache Log4j which may allow remote code execution in an impacted vRealize Operations Tenant application.
+  reference:
+    - https://www.vmware.com/security/advisories/VMSA-2021-0028.html
+    - https://core.vmware.com/vmsa-2021-0028-questions-answers-faq
+    - https://nvd.nist.gov/vuln/detail/CVE-2021-44228
+    - https://nvd.nist.gov/vuln/detail/CVE-2021-45046
   metadata:
     shodan-query: http.title:"vRealize Operations Tenant App"
   tags: rce,log4j,vmware,vrealize
+  classification:
+    cvss-metrics: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:C/C:H/I:H/A:H
 
 requests:
   - raw:
@@ -39,3 +45,5 @@ requests:
         group: 1
         regex:
           - '([a-zA-Z0-9\.\-]+)\.([a-z0-9]+)\.([a-z0-9]+)\.\w+'   # Print extracted ${hostName} in output
+
+# Enhanced by mp on 2022/03/21
