--- a/exposed-panels/arcgis/arcgis-panel.yaml
+++ b/exposed-panels/arcgis/arcgis-panel.yaml
@@ -5,6 +5,14 @@ info:
   author: Podalirius
   severity: info
   tags: docs,arcgis,cms,panel
+  description: An ArcGIS instance was discovered.
+  reference:
+    - https://enterprise.arcgis.com/en/
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -35,3 +43,5 @@ requests:
         group: 2
         regex:
           - '(Released Version:</strong>[\n\t ]+(([0-9]+(.[0-9]+)?(.[0-9]+)?)([\n\t ]+\([A-Za-z]+[\t ]+20[0-9][0-9]\))?))'
+
+# Enhanced by mp on 2022/03/20
