--- a/exposed-panels/arcgis/arcgis-rest-api.yaml
+++ b/exposed-panels/arcgis/arcgis-rest-api.yaml
@@ -1,10 +1,18 @@
 id: arcgis-rest-api
 
 info:
-  name: ArcGIS exposed docs
+  name: ArcGIS Exposed Docs
   author: Podalirius
   severity: info
+  description: ArcGIS documents were discovered.
   tags: api,arcgis,cms
+  reference:
+    - https://enterprise.arcgis.com/en/
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -20,3 +28,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by mp on 2022/03/20
