--- a/exposed-panels/axigen-webmail.yaml
+++ b/exposed-panels/axigen-webmail.yaml
@@ -1,15 +1,20 @@
 id: axigen-webmail
 
 info:
-  name: Axigen WebMail
+  name: Axigen WebMail PanelDetection
   author: dhiyaneshDk,idealphase
   severity: info
-  description: This template determines if Axigen Webmail is running.
+  description: An Axigen webmail panel was discovered.
   reference:
     - https://www.axigen.com/
   metadata:
     shodan-query: 'http.title:"Axigen WebMail"'
   tags: axigen,panel
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -34,3 +39,5 @@ requests:
         part: body
         regex:
           - '<script type="text\/javascript" src="js\/lib_login\.js\?v=(.+)"><\/script>'
+
+# Enhanced by mp on 2022/03/20
