--- a/exposed-panels/open-virtualization-manager-panel.yaml
+++ b/exposed-panels/open-virtualization-manager-panel.yaml
@@ -1,7 +1,7 @@
 id: open-virtualization-manager-panel
 
 info:
-  name: Open Virtualization Manager userportal and webadmin panel
+  name: Open Virtualization Manager Userportal and Webadmin panel
   author: idealphase
   severity: info
   description: open-source distributed virtualization solution, designed to manage your entire enterprise infrastructure. oVirt uses the trusted KVM hypervisor and is built upon several other community projects, including libvirt, Gluster, PatternFly, and Ansible.
@@ -11,7 +11,7 @@ info:
   reference:
     - https://www.ovirt.org/
     - https://www.ovirt.org/dropped/admin-guide/virt/console-client-resources.html
-  tags: panel,ovirt
+  tags: panel,ovirt,oss
 
 requests:
   - method: GET
@@ -22,10 +22,10 @@ requests:
     matchers-condition: and
     matchers:
       - type: word
-        condition: or
         words:
           - '"application_title":"oVirt Engine User Portal"'
           - '"application_title":"oVirt Engine Web Administration"'
+        condition: or
 
       - type: status
         status:
