--- a/technologies/open-virtualization-manager-detect.yaml
+++ b/technologies/open-virtualization-manager-detect.yaml
@@ -1,7 +1,7 @@
 id: open-virtualization-manager-detect
 
 info:
-  name: Open Virtualization Manager detect
+  name: Open Virtualization Manager Detect
   author: idealphase
   severity: info
   description: open-source distributed virtualization solution, designed to manage your entire enterprise infrastructure. oVirt uses the trusted KVM hypervisor and is built upon several other community projects, including libvirt, Gluster, PatternFly, and Ansible.
@@ -24,10 +24,9 @@ requests:
         words:
           - "Welcome to Open Virtualization Manager"
           - "<title>Ovirt-Engine</title>"
-
-      - type: status
-        status:
-          - 200
+          - "<title>oVirt Engine</title>"
+          - "<title>oVirt Engine Error</title>"
+        condition: or
 
     extractors:
       - type: regex
