Dashboard Content Enhancements (#3958)
Dashboard Content Enhancements

--- a/default-logins/alphaweb/alphaweb-default-login.yaml
+++ b/default-logins/alphaweb/alphaweb-default-login.yaml
@@ -4,8 +4,15 @@ info:
   name: AlphaWeb XE Default Login
   author: Lark Lab
   severity: medium
+  description: An AlphaWeb XE default login was discovered.
   tags: default-login
-  reference: https://wiki.zenitel.com/wiki/AlphaWeb
+  reference:
+    - https://wiki.zenitel.com/wiki/AlphaWeb
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:N/A:N
+    cvss-score: 5.8
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -33,3 +40,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by mp on 2022/03/22
