--- a/default-logins/ambari/ambari-default-login.yaml
+++ b/default-logins/ambari/ambari-default-login.yaml
@@ -3,8 +3,16 @@ id: ambari-default-login
 info:
   name: Apache Ambari Default Login
   author: pdteam
-  severity: medium
+  description: An Apache Ambari default admin login was discovered.
+  severity: high
   tags: ambari,default-login,apache
+  reference:
+    - https://ambari.apache.org/1.2.0/installing-hadoop-using-ambari/content/ambari-chap3-1.html
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -24,3 +32,5 @@ requests:
           - '"Users" : {'
           - 'AMBARI.'
         condition: and
+
+# Enhanced by mp on 2022/03/22
