--- a/default-logins/arl/arl-default-login.yaml
+++ b/default-logins/arl/arl-default-login.yaml
@@ -1,10 +1,16 @@
 id: arl-default-login
 
 info:
-  name: ARL Default Login
+  name: ARL Default Admin Login
   author: pikpikcu
+  description: An ARL default admin login was discovered.
   severity: high
   tags: arl,default-login
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -35,3 +41,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by mp on 2022/03/22
