--- a/default-logins/digitalrebar/digitalrebar-default-login.yaml
+++ b/default-logins/digitalrebar/digitalrebar-default-login.yaml
@@ -1,11 +1,19 @@
 id: digitalrebar-default-login
 
 info:
-  name: RackN Digital Rebar provision default login
+  name: RackN Digital Rebar Default Login
   author: c-sh0
   severity: high
-  reference: https://docs.rackn.io/en/latest/doc/faq-troubleshooting.html?#what-are-the-default-passwords
+  description: A RackN Digital Rebar default login was discovered.
+  reference:
+    - https://docs.rackn.io/en/latest/doc/faq-troubleshooting.html?#what-are-the-default-passwords
+    - https://rackn.com/
   tags: rackn,digitalrebar,default-login
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -38,3 +46,5 @@ requests:
           - 'Name'
           - 'Secret'
         condition: and
+
+# Enhanced by mp on 2022/03/22
