--- a/default-logins/mantisbt/mantisbt-default-credential.yaml
+++ b/default-logins/mantisbt/mantisbt-default-credential.yaml
@@ -1,12 +1,20 @@
 id: mantisbt-default-credential
 
 info:
-  name: MantisBT Default Credential
+  name: MantisBT Default Admin Login
   author: For3stCo1d
   severity: high
+  description: A MantisBT default admin login was discovered.
+  reference:
+    - https://mantisbt.org/
   metadata:
     shodan-query: title:"MantisBT"
   tags: mantisbt,default-login
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -35,3 +43,5 @@ requests:
       - type: status
         status:
           - 302
+
+# Enhanced by mp on 2022/03/22
