--- a/default-logins/stackstorm/stackstorm-default-login.yaml
+++ b/default-logins/stackstorm/stackstorm-default-login.yaml
@@ -4,10 +4,17 @@ info:
   name: StackStorm Default Login
   author: PaperPen
   severity: high
+  description: A StackStorm default admin login was discovered.
   metadata:
     fofa-query: app="stackstorm"
-  reference: https://github.com/StackStorm/st2-docker
+  reference:
+    - https://github.com/StackStorm/st2-docker
   tags: stackstorm,default-login
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -36,3 +43,5 @@ requests:
       - type: status
         status:
           - 201
+
+# Enhanced by mp on 2022/03/22
