--- a/exposed-panels/active-admin-exposure.yaml
+++ b/exposed-panels/active-admin-exposure.yaml
@@ -4,7 +4,15 @@ info:
   name: ActiveAdmin Admin Dasboard Exposure
   author: pdteam
   severity: info
+  description: An ActiveAdmin Admin dashboard was discovered.
   tags: panel,activeadmin
+  reference:
+    - https://activeadmin.info/
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -16,3 +24,5 @@ requests:
           - "active_admin_content"
           - "active_admin-"
         condition: and
+
+# Enhanced by mp on 2022/03/22
