--- a/exposed-panels/activemq-panel.yaml
+++ b/exposed-panels/activemq-panel.yaml
@@ -4,7 +4,15 @@ info:
   name: Apache ActiveMQ Exposure
   author: pdteam
   severity: info
+  description: An Apache ActiveMQ implementation was discovered.
+  reference:
+    - https://activemq.apache.org/
   tags: panel,activemq,apache
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -17,3 +25,5 @@ requests:
           - '<h2>Welcome to the Apache ActiveMQ!</h2>'
           - '<title>Apache ActiveMQ</title>'
         condition: and
+
+# Enhanced by mp on 2022/03/22
