--- a/default-logins/alibaba/canal-default-login.yaml
+++ b/default-logins/alibaba/canal-default-login.yaml
@@ -3,8 +3,16 @@ id: canal-default-login
 info:
   name: Alibaba Canal Default Login
   author: pdteam
+  description: An Alibaba Canal default login was discovered.
   severity: high
   tags: alibaba,default-login
+  reference:
+    - https://github.com/alibaba/canal/wiki/ClientAdapter
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -33,3 +41,5 @@ requests:
         words:
           - 'data":{"token"'
           - '"code":20000'
+
+# Enhanced by mp on 2022/03/22
