--- a/default-logins/apache/airflow-default-login.yaml
+++ b/default-logins/apache/airflow-default-login.yaml
@@ -3,11 +3,18 @@ id: airflow-default-login
 info:
   name: Apache Airflow Default Login
   author: pdteam
-  severity: critical
+  severity: high
   tags: airflow,default-login,apache
-  reference: https://airflow.apache.org/docs/apache-airflow/stable/start/docker.html
+  description: An Apache Airflow default login was discovered.
+  reference:
+    - https://airflow.apache.org/docs/apache-airflow/stable/start/docker.html
   metadata:
     shodan-query: title:"Sign In - Airflow"
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -54,3 +61,5 @@ requests:
       - type: word
         words:
           - 'You should be redirected automatically to target URL: <a href="/">'
+
+# Enhanced by mp on 2022/03/22
