--- a/default-logins/apache/apisix-default-login.yaml
+++ b/default-logins/apache/apisix-default-login.yaml
@@ -1,14 +1,22 @@
 id: apisix-default-login
 
 info:
-  name: Apache Apisix Default Login
+  name: Apache Apisix Default Admin Login
   author: pdteam
-  severity: critical
+  severity: high
   tags: apisix,apache,default-login
+  description: An Apache Apisix default admin login was discovered.
   metadata:
     shodan-query: title:"Apache APISIX Dashboard"
     fofa-query: title="Apache APISIX Dashboard"
     product: https://apisix.apache.org
+  reference:
+    - https://apisix.apache.org/
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -40,3 +48,5 @@ requests:
           - '"token"'
           - '"code":0'
         condition: and
+
+# Enhanced by mp on 2022/03/22
