--- a/default-logins/apollo/apollo-default-login.yaml
+++ b/default-logins/apollo/apollo-default-login.yaml
@@ -4,10 +4,17 @@ info:
   name: Apollo Default Login
   author: PaperPen
   severity: high
+  description: An Apollo default login was discovered.
   metadata:
     shodan-query: http.favicon.hash:11794165
-  reference: https://github.com/apolloconfig/apollo
+  reference:
+    - https://github.com/apolloconfig/apollo
   tags: apollo,default-login
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -47,3 +54,5 @@ requests:
           - "status_code_1 == 302 && status_code_2 == 200"
           - "contains(tolower(all_headers_2), 'application/json')"
         condition: and
+
+# Enhanced by mp on 2022/03/22
