--- a/dns/caa-fingerprint.yaml
+++ b/dns/caa-fingerprint.yaml
@@ -1,11 +1,18 @@
 id: caa-fingerprint
 
 info:
-  name: CAA Fingerprint
+  name: CAA Record
   author: pdteam
+  description: A CAA record was discovered. A CAA record is used to specify which certificate authorities (CAs) are allowed to issue certificates for a domain.
   severity: info
-  reference: https://support.dnsimple.com/articles/caa-record/#whats-a-caa-record
+  reference:
+    - https://support.dnsimple.com/articles/caa-record/#whats-a-caa-record
   tags: dns,caa
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 dns:
   - name: "{{FQDN}}"
@@ -23,3 +30,5 @@ dns:
           - 'issue "(.*)"'
           - 'issuewild "(.*)"'
           - 'iodef "(.*)"'
+
+# Enhanced by mp on 2022/03/22
