--- a/.github/workflows/new-templates.yml
+++ b/.github/workflows/new-templates.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   templates:
     runs-on: ubuntu-latest
+    if: github.repository == 'projectdiscovery/nuclei-templates'
     steps:
       - uses: actions/checkout@master
         with:
