--- a/exposed-panels/directadmin-login-panel.yaml
+++ b/exposed-panels/directadmin-login-panel.yaml
@@ -1,14 +1,13 @@
 id: directadmin-login-panel
 
 info:
-  name: DirectAdmin Login Page
-  description: A modern control panel's primary purpose is to effectively facilitate the routine management of your hosting infrastructure and present these tasks simply and intuitively to both the user and to you as the administrator.
-  reference:
-    - https://www.directadmin.com/whats_new.php
+  name: DirectAdmin Login Panel Detect
   author: idealphase
+  severity: info
+  description: A modern control panel's primary purpose is to effectively facilitate the routine management of your hosting infrastructure and present these tasks simply and intuitively to both the user and to you as the administrator.
+  reference: https://www.directadmin.com/whats_new.php
   metadata:
     shodan-query: title:"DirectAdmin Login"
-  severity: info
   tags: panel,directadmin
 
 requests:
@@ -18,10 +17,10 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: status
-        status:
-          - 200
-
       - type: word
         words:
           - "<title>DirectAdmin Login</title>"
+
+      - type: status
+        status:
+          - 200
