--- a/vulnerabilities/wordpress/wordpress-wp-cron.yaml
+++ b/vulnerabilities/wordpress/wordpress-wp-cron.yaml
@@ -3,21 +3,29 @@ id: wordpress-wp-cron
 info:
   name: Wordpress wp-cron.php DOS
   author: pathtaga
-  severity: medium
+  severity: info
   description: When this file is accessed a heavy MySQL query is performed, so it could be used by attackers to cause a DoS.
   reference:
     - https://book.hacktricks.xyz/pentesting/pentesting-web/wordpress
-  tags: wordpress,plugin,cron
+    - https://medium.com/@thecpanelguy/the-nightmare-that-is-wpcron-php-ae31c1d3ae30
+  tags: wordpress,cron,wp,dos
 
 requests:
-- raw:
-  - |+
-    GET /wp-cron.php HTTP/2
-    Host: {{Hostname}}
-    User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4844.82 Safari/537.36
-    Connection: close
+  - method: GET
+    path:
+      - "{{BaseURL}}/wp-cron.php"
 
-  matchers:
-  - type: status
-    status:
-    - 200
+    matchers-condition: and
+    matchers:
+      - type: word
+        part: header
+        words:
+          - "text/html"
+
+      - type: status
+        status:
+          - 200
+
+      - type: dsl
+        dsl:
+          - "len(body) == 0"
