--- a/vulnerabilities/wordpress/wordpress-wp-cron.yaml
+++ b/vulnerabilities/wordpress/wordpress-wp-cron.yaml
@@ -8,7 +8,7 @@ info:
   reference:
     - https://book.hacktricks.xyz/pentesting/pentesting-web/wordpress
     - https://medium.com/@thecpanelguy/the-nightmare-that-is-wpcron-php-ae31c1d3ae30
-  tags: wordpress,cron,wp,dosd
+  tags: wordpress,cron,wp,dos
 
 requests:
   - method: GET
