--- a/misconfiguration/jolokia/jolokia-info-disclosure.yaml
+++ b/misconfiguration/jolokia/jolokia-info-disclosure.yaml
@@ -35,7 +35,7 @@ requests:
       - type: word
         name: memory
         words:
-          - '"java.lang:type=Memory"'
+          - '"mbean":"java.lang:type=Memory"'
 
       - type: word
         name: implementation-vendor
