--- a/vulnerabilities/wordpress/wordpress-wp-cron.yaml
+++ b/vulnerabilities/wordpress/wordpress-wp-cron.yaml
@@ -23,7 +23,7 @@ requests:
         dsl:
           - "len(body) == 0"
           - "status_code_2 == 200"
-          - "contains(body_2, 'text/html')"
+          - "contains(content_type_2, 'text/html')"
 
       - type: dsl
         dsl:
