--- a/misconfiguration/elasticsearch.yaml
+++ b/misconfiguration/elasticsearch.yaml
@@ -2,7 +2,7 @@ id: elasticsearch
 
 info:
   name: ElasticSearch Information Disclosure
-  author: Shine
+  author: Shine,c-sh0
   severity: low
   tags: elastic,unauth,elasticsearch
 
