fixed len condition

--- a/vulnerabilities/wordpress/wordpress-wp-cron.yaml
+++ b/vulnerabilities/wordpress/wordpress-wp-cron.yaml
@@ -21,12 +21,6 @@ requests:
     matchers:
       - type: dsl
         dsl:
-          - "len(body) == 0"
-          - "status_code_2 == 200"
-          - "contains(content_type_2, 'text/html')"
-
-      - type: dsl
-        dsl:
           - (regex("<link[^>]+s\d+\.wp\.com",body_1))
           - (regex("<!-- This site is optimized with the Yoast (?:WordPress )?SEO plugin v([\d.]+) -",body_1))
           - (regex("<!--[^>]+WP-Super-Cache",body_1))
@@ -35,3 +29,10 @@ requests:
           - contains(body_1, 'name=\"generator\" content=\"wordpress')
           - contains(body_1, '<!-- performance optimized by w3 total cache.')
         condition: or
+
+      - type: dsl
+        dsl:
+          - "len(body_2) == 0"
+          - "status_code_2 == 200"
+          - "contains(content_type_2, 'text/html')"
+
