--- a/exposed-panels/cisco/cisco-systems-login.yaml
+++ b/exposed-panels/cisco/cisco-systems-login.yaml
@@ -2,11 +2,12 @@ id: cisco-systems-login
 
 info:
   name: Cisco Systems Login
-  author: dhiyaneshDk
+  author: dhiyaneshDk,idealphase
   severity: info
-  tags: panel,cisco
   metadata:
-    shodan-query: 'http.title:"Cisco Systems Login"'
+    shodan-query: http.title:"Cisco Systems Login"
+    google-query: intitle:"Cisco Systems Login"
+  tags: panel,cisco
 
 requests:
   - method: GET
@@ -23,3 +24,9 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        group: 1
+        regex:
+          - '<script src="javascript\/translate\.js\?(.+)"><\/script>'
