--- a/exposed-panels/cisco/cisco-systems-login.yaml
+++ b/exposed-panels/cisco/cisco-systems-login.yaml
@@ -19,7 +19,7 @@ requests:
       - type: word
         part: body
         words:
-          - "<TITLE>Cisco Systems Login</TITLE>"
+          - "Cisco Systems Login"
 
       - type: status
         status:
@@ -29,4 +29,4 @@ requests:
       - type: regex
         group: 1
         regex:
-          - '<script src="javascript\/translate\.js\?(.+)"><\/script>'
+          - '<script src="javascript\/translate\.js\?ver=(.+)"><\/script>'
