--- a/exposed-panels/ansible-semaphore-panel.yaml
+++ b/exposed-panels/ansible-semaphore-panel.yaml
@@ -3,6 +3,7 @@ id: ansible-semaphore-panel
 info:
   name: Ansible Semaphore Panel Detect
   author: Yuzhe-zhang-0
+  description: An Ansible Semaphore login panel was detected.
   severity: info
   reference:
     - https://ansible-semaphore.com/
@@ -10,6 +11,11 @@ info:
   metadata:
     shodan-query: http.html:"Semaphore</title>"
   tags: panel,ansible,semaphore,cicd,oss
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -25,3 +31,5 @@ requests:
       - type: regex
         regex:
           - '<title(.*)>Semaphore</title>'
+
+# Enhanced by mp on 2022/03/23
