--- a/exposed-panels/aviatrix-panel.yaml
+++ b/exposed-panels/aviatrix-panel.yaml
@@ -1,12 +1,20 @@
 id: aviatrix-panel
 
 info:
-  name: Aviatrix Panel Login
+  name: Aviatrix Cloud Controller Panel Login
   author: pikpikcu,philippedelteil,daffainfo
   severity: info
+  description: An Aviatrix Cloud Controller login panel was detected.
+  reference:
+    - https://docs.aviatrix.com/HowTos/controller_config.html
   metadata:
     shodan-query: http.title:"Aviatrix Cloud Controller"
   tags: panel,aviatrix
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -29,3 +37,5 @@ requests:
         name: "favicon"
         dsl:
           - "status_code==200 && (\"7c1c26856345cd7edbf250ead0dc9332\" == md5(body))"
+
+# Enhanced by mp on 2022/03/23
