--- a/exposed-panels/bigbluebutton-login.yaml
+++ b/exposed-panels/bigbluebutton-login.yaml
@@ -3,9 +3,16 @@ id: bigbluebutton-login
 info:
   name: BigBlueButton Login Panel
   author: myztique
+  description: A BigBlueButton login panel was detected.
   severity: info
-  reference: https://github.com/bigbluebutton/greenlight
+  reference:
+    - https://github.com/bigbluebutton/greenlight
   tags: panel,bigbluebutton
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -26,3 +33,5 @@ requests:
         group: 1
         regex:
           - 'Greenlight<\/a>\. (.*)'
+
+# Enhanced by mp on 2022/03/23
