--- a/default-logins/aem/aem-default-login.yaml
+++ b/default-logins/aem/aem-default-login.yaml
@@ -3,8 +3,16 @@ id: aem-default-login
 info:
   name: Adobe AEM Default Login
   author: random-robbie
-  severity: critical
+  severity: high
+  description: Adobe AEM default login credentials were discovered.
+  reference:
+    - https://experienceleague.adobe.com/docs/experience-manager-64/administering/security/security-checklist.html?lang=en
   tags: aem,default-login,adobe
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -44,3 +52,5 @@ requests:
         words:
           - login-token
           - crx.default
+
+# Enhanced by mp on 2022/03/23
