--- a/exposed-panels/blue-iris-login.yaml
+++ b/exposed-panels/blue-iris-login.yaml
@@ -4,8 +4,16 @@ info:
   name: Blue Iris Login
   author: dhiyaneshDK
   severity: info
-  reference: https://www.exploit-db.com/ghdb/6814
-  tags: panel
+  description: A Blue Iris login panel was detected.
+  reference:
+    - https://www.exploit-db.com/ghdb/6814
+    - https://blueirissoftware.com/
+  tags: panel,blue-iris
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -20,3 +28,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by mp on 2022/03/23
