Dashboard Content Enhancements (#3980)
Dashboard Content Enhancements

--- a/default-logins/alphaweb/alphaweb-default-login.yaml
+++ b/default-logins/alphaweb/alphaweb-default-login.yaml
@@ -5,14 +5,13 @@ info:
   author: Lark Lab
   severity: medium
   description: An AlphaWeb XE default login was discovered.
-  tags: default-login
   reference:
     - https://wiki.zenitel.com/wiki/AlphaWeb
   classification:
     cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:N/A:N
     cvss-score: 5.8
-    cve-id:
     cwe-id: CWE-522
+  tags: default-login,AlphaWeb
 
 requests:
   - raw:
