--- a/iot/hp-color-laserjet-detect.yaml
+++ b/iot/hp-color-laserjet-detect.yaml
@@ -8,8 +8,8 @@ info:
     - http://www.hp.com/
     - https://www.hp.com/us-en/shop/cv/printers
   metadata:
-    shodan-query: http.title:"HP Color LaserJet M255dw"
-    google-query: intitle:"HP Color LaserJet M255dw"
+    shodan-query: http.title:"HP Color LaserJet"
+    google-query: intitle:"HP Color LaserJet"
   tags: iot,hp
 
 requests:
