minor updates to template names

--- a/exposed-panels/open-virtualization-manager-panel.yaml
+++ b/exposed-panels/open-virtualization-manager-panel.yaml
@@ -1,7 +1,7 @@
 id: open-virtualization-manager-panel
 
 info:
-  name: Open Virtualization Manager Userportal and Webadmin panel
+  name: Open Virtualization Userportal & Webadmin Panel
   author: idealphase
   severity: info
   description: open-source distributed virtualization solution, designed to manage your entire enterprise infrastructure. oVirt uses the trusted KVM hypervisor and is built upon several other community projects, including libvirt, Gluster, PatternFly, and Ansible.
