--- a/technologies/microsoft/microsoft-iis-version.yaml
+++ b/technologies/microsoft/microsoft-iis-version.yaml
@@ -3,20 +3,20 @@ id: microsoft-iis-version
 info:
   name: Microsoft IIS version detect
   author: Wlayzz
-  description: Some Microsoft IIS servers have the version on the response header. Useful when you need to find specific CVEs on your targets.
   severity: info
+  description: Some Microsoft IIS servers have the version on the response header. Useful when you need to find specific CVEs on your targets.
   tags: tech,microsoft,iis
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
-
-      - type: regex
+      - type: word
         part: header
-        regex:
+        words:
           - "IIS"
 
       - type: status
