--- a/exposed-panels/sophos-mobile-panel.yaml
+++ b/exposed-panels/sophos-mobile-panel.yaml
@@ -25,4 +25,4 @@ requests:
       - type: regex
         group: 1
         regex:
-          - 'src="\/javax\.faces\.resource\/texteditor\/texteditor\.js\.xhtml\?ln=primefaces&amp;(.+)"><\/script>'
+          - 'src="\/javax\.faces\.resource\/texteditor\/texteditor\.js\.xhtml\?ln=primefaces&amp;v=(.+)"><\/script>'
