--- a/exposed-panels/sophos-mobile-panel.yaml
+++ b/exposed-panels/sophos-mobile-panel.yaml
@@ -26,3 +26,4 @@ requests:
         group: 1
         regex:
           - 'src="\/javax\.faces\.resource\/texteditor\/texteditor\.js\.xhtml\?ln=primefaces&amp;v=(.+)"><\/script>'
+          - 'src="\/javax\.faces\.resource\/components\.js\.xhtml\?ln=primefaces&amp;v=(.+)"><\/script>'
