--- a/default-logins/apache/dolphinscheduler-default-login.yaml
+++ b/default-logins/apache/dolphinscheduler-default-login.yaml
@@ -3,10 +3,16 @@ id: dolphinscheduler-default-login
 info:
   name: Apache DolphinScheduler Default Login
   author: For3stCo1d
+  description: Apache DolphinScheduler default admin credentials were discovered.
   severity: high
   reference: https://github.com/apache/dolphinscheduler
   metadata:
     shodan-query: http.title:"DolphinScheduler"
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
   tags: apache,dolphinscheduler,default-login,oss
 
 requests:
@@ -37,3 +43,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by mp on 2022/03/28
