--- a/default-logins/emqx/emqx-default-login.yaml
+++ b/default-logins/emqx/emqx-default-login.yaml
@@ -1,11 +1,18 @@
 id: emqx-default-login
 
 info:
-  name: Emqx Default Login
+  name: Emqx Default Admin Login
   author: For3stCo1d
   severity: high
+  description: Emqx default admin credentials were discovered.
   metadata:
+  name: Emqx Default Login
     shodan-query: http.favicon.hash:"-670975485"
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
   tags: emqx,default-login
 
 requests:
@@ -30,3 +37,5 @@ requests:
           - body == "{\"code\":0}"
           - status_code == 200
         condition: and
+
+# Enhanced by mp on 2022/03/28
