--- a/default-logins/geoserver/geoserver-default-login.yaml
+++ b/default-logins/geoserver/geoserver-default-login.yaml
@@ -1,11 +1,19 @@
 id: geoserver-default-login
 
 info:
-  name: Geoserver Default Login
+  name: Geoserver Default Admin Login
   author: For3stCo1d
   severity: high
+  description: Geoserver default admin credentials were discovered. 
+  reference:
+    - http://geoserver.org/
   metadata:
     fofa-query: app="GeoServer"
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
   tags: geoserver,default-login
 
 requests:
@@ -35,3 +43,5 @@ requests:
       - type: status
         status:
           - 302
+
+# Enhanced by mp on 2022/03/28
