--- a/default-logins/cobbler/hue-default-credential.yaml
+++ b/default-logins/cobbler/hue-default-credential.yaml
@@ -4,11 +4,16 @@ info:
   name: Cloudera Hue Default Admin Login
   author: For3stCo1d
   severity: high
-  description: Hue default admin login was discovered.
+  description: Cloudera Hue default admin credentials were discovered.
   reference: https://github.com/cloudera/hue
   metadata:
     shodan-query: title:"Hue - Welcome to Hue"
-  tags: hue,default-login,oss
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
+  tags: hue,default-login,oss,cloudera
 
 requests:
   - raw:
@@ -61,3 +66,5 @@ requests:
       - type: status
         status:
           - 302
+
+# Enhanced by mp on 2022/03/28
