--- a/cnvd/2021/CNVD-2021-14536.yaml
+++ b/cnvd/2021/CNVD-2021-14536.yaml
@@ -7,7 +7,7 @@ info:
   description: Ruijie RG-UAC Unified Internet Behavior Management Audit System is susceptible to information disclosure. Attackers could obtain user accounts and passwords by reviewing the source code of web pages, resulting in the leakage of administrator user authentication information.
   reference: https://www.adminxe.com/2163.html
   metadata:
-    fofa-query: title="RG-UACç»å½é¡µé¢"
+    fofa-query: 'title="RG-UAC登录页面"'
   classification:
     cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
     cvss-score: 8.3
