--- a/default-logins/emqx/emqx-default-login.yaml
+++ b/default-logins/emqx/emqx-default-login.yaml
@@ -6,8 +6,7 @@ info:
   severity: high
   description: Emqx default admin credentials were discovered.
   metadata:
-  name: Emqx Default Login
-    shodan-query: http.favicon.hash:"-670975485"
+    shodan-query: 'http.favicon.hash:"-670975485"'
   classification:
     cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
     cvss-score: 8.3
