--- a/exposed-panels/3cx-phone-management-panel.yaml
+++ b/exposed-panels/3cx-phone-management-panel.yaml
@@ -9,7 +9,9 @@ info:
     - https://www.3cx.com/phone-system/
     - https://medium.com/@frycos/pwning-3cx-phone-management-backends-from-the-internet-d0096339dd88
   metadata:
-    shodan-query: http.title:"3CX Phone System Management Console"
+    shodan-query:
+      - http.title:"3CX Phone System Management Console"
+      - http.favicon.hash:970132176
     google-query: intitle:"3CX Phone System Management Console"
   tags: panel,3cx
 
@@ -21,5 +23,6 @@ requests:
     matchers:
       - type: word
         words:
-          - "<title>3CX Phone System Management Console</title>"
+          - "3CX Phone System Management Console"
           - "Welcome to the 3CX Management Console"
+        condition: or
