--- a/exposed-panels/3cx-phone-webclient-management-panel.yaml
+++ b/exposed-panels/3cx-phone-webclient-management-panel.yaml
@@ -1,11 +1,10 @@
 id: 3cx-phone-webclient-management-panel
 
 info:
-  name: 3CX Phone System Webclient Management Console Detect
+  name: 3CX Phone System Webclient Management Console
   author: idealphase
   severity: info
   reference:
-    - https://www.3cx.com/
     - https://www.3cx.com/phone-system/
     - https://www.3cx.com/blog/unified-communications/client-apps/
     - https://medium.com/@frycos/pwning-3cx-phone-management-backends-from-the-internet-d0096339dd88
@@ -24,3 +23,4 @@ requests:
         words:
           - " <title>3CX Webclient</title>"
           - '<meta name="description" content="3CX">'
+        condition: or
