--- a/vulnerabilities/wordpress/video-synchro-pdf-lfi.yaml
+++ b/vulnerabilities/wordpress/video-synchro-pdf-lfi.yaml
@@ -1,10 +1,12 @@
-id: video-synchro-pdf
+id: video-synchro-pdf-lfi
 
 info:
-  name: WordPress Plugin video-synchro-pdf 1.7.4 - Local File Inclusion - Unauthenticated
+  name: Videos sync PDF 1.7.4 - Unauthenticated Local File Inclusion
   author: Hassan Khan Yusufzai - Splint3r7
   severity: high
-  reference: 
+  reference:
+    - https://www.exploit-db.com/exploits/50844
+    - https://wordpress.org/plugins/video-synchro-pdf/
   tags: wordpress,wp-plugin,lfi,wp
 
 requests:
