--- a/vulnerabilities/wordpress/cab-fare-calculator-lfi.yaml
+++ b/vulnerabilities/wordpress/cab-fare-calculator-lfi.yaml
@@ -1,10 +1,12 @@
-id: cab-fare-calculator
+id: cab-fare-calculator-lfi
 
 info:
-  name: WordPress Plugin cab-fare-calculator 1.0.3 - Local File Inclusion - Unauthenticated
+  name: Cab fare calculator 1.0.3 - Unauthenticated Local File Inclusion
   author: Hassan Khan Yusufzai - Splint3r7
   severity: high
-  reference: https://www.exploit-db.com/exploits/50844
+  reference:
+    - https://www.exploit-db.com/exploits/50843
+    - https://wordpress.org/plugins/cab-fare-calculator
   tags: wordpress,wp-plugin,lfi,wp
 
 requests:
