--- a/vulnerabilities/wordpress/amministrazione-aperta-lfi.yaml
+++ b/vulnerabilities/wordpress/amministrazione-aperta-lfi.yaml
@@ -1,10 +1,12 @@
 id: amministrazione-aperta-lfi
 
 info:
-  name: WordPress Plugin amministrazione-aperta 3.7.3 - Unauthenticated Local File Read
+  name: Amministrazione Aperta 3.7.3 - Unauthenticated Local File Read
   author: daffainfo,Splint3r7
   severity: high
-  reference: https://www.exploit-db.com/exploits/50838
+  reference:
+    - https://www.exploit-db.com/exploits/50838
+    - https://wordpress.org/plugins/amministrazione-aperta
   tags: wordpress,wp-plugin,lfi,wp
 
 requests:
