--- a/vulnerabilities/wordpress/admin-word-count-column-lfi.yaml
+++ b/vulnerabilities/wordpress/admin-word-count-column-lfi.yaml
@@ -1,10 +1,12 @@
 id: admin-word-count-column-lfi
 
 info:
-  name: WordPress Plugin admin-word-count-column 2.2 - Unauthenticated Local File Download
+  name: Admin word count column 2.2 - Unauthenticated Local File Download
   author: daffainfo,Splint3r7
   severity: high
-  reference: https://packetstormsecurity.com/files/166476/WordPress-Admin-Word-Count-Column-2.2-Local-File-Inclusion.html
+  reference:
+    - https://packetstormsecurity.com/files/166476/WordPress-Admin-Word-Count-Column-2.2-Local-File-Inclusion.html
+    - https://wordpress.org/plugins/admin-word-count-column/
   tags: wordpress,wp-plugin,lfi,wp
 
 requests:
