--- a/exposed-panels/blue-iris-login.yaml
+++ b/exposed-panels/blue-iris-login.yaml
@@ -2,7 +2,7 @@ id: blue-iris-login
 
 info:
   name: Blue Iris Login
-  author: dhiyaneshDK
+  author: dhiyaneshDK,idealphase
   severity: info
   description: A Blue Iris login panel was detected.
   reference:
@@ -28,4 +28,8 @@ requests:
         status:
           - 200
 
-# Enhanced by mp on 2022/03/23
+    extractors:
+      - type: regex
+        group: 1
+        regex:
+          - 'var bi_version = "(.*)";'
