--- a/iot/routeros-login.yaml
+++ b/iot/routeros-login.yaml
@@ -2,7 +2,7 @@ id: routeros-login
 
 info:
   name: RouterOS router configuration page login
-  author: dhiyaneshDK
+  author: dhiyaneshDK,idealphase
   severity: info
   tags: panel,router
   metadata:
@@ -22,3 +22,9 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        group: 1
+        regex:
+          - '<h1>RouterOS v(.+)<\/h1>'
